[package]
name = "httpserver"
version = "0.1.0"
authors = ["Waldemar Kozaczuk <jwkozaczuk@gmail.com>"]

[dependencies]
futures = "0.1.21"
hyper = "0.12.25"
pretty_env_logger = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.1"
lazy_static = "1.3"
num_cpus = "1.10"

[lib]
crate-type = ["cdylib"]
